# Tactical-Grid

./: .gitignore  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Project.md  README.md  Remaster.md  SECURITY.md  Unused.md  check.md  plan.md  pubspec.yaml
.github/workflows/: ci.yml
.kiro/specs/engagement-progression-system/: .config.kiro
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: .clang-format  .clang-tidy  CMakeLists.txt
android/app/src/main/cpp/engine/content/: EnemyArchetypes.cpp  EnemyArchetypes.h  EnemyBehaviors.cpp  EnemyBehaviors.h  GeneratedMaps.h  TowerCatalog.cpp  TowerCatalog.h  TowerUpgrades.cpp  TowerUpgrades.h  WaveSpec.cpp  WaveSpec.h
android/app/src/main/cpp/engine/domain/: GameConfigState.h  GameRuntimeTypes.h  TargetingModes.h
android/app/src/main/cpp/engine/rendering/: GlRenderer2D.cpp  GlRenderer2D.h
android/app/src/main/cpp/engine/runtime/: NativeBridge.cpp  NativeEngine.cpp  NativeEngine.h  NativeInterop.h
android/app/src/main/cpp/engine/systems/: EnemySystem.cpp  EnemySystem.h  ProjectileSystem.cpp  ProjectileSystem.h  TowerSystem.cpp  TowerSystem.h  WaveRuntime.cpp  WaveRuntime.h
lib/: main.dart
lib/src/features/game/application/: controller.dart  controller_render.dart  controller_simulation.dart  controller_ui.dart
lib/src/features/game/domain/: content.dart  models.dart
lib/src/features/game/infrastructure/: lz_string.dart  maps.dart  native_ffi_bindings.dart  (+2 more)
test/: catalog_parity_test.dart  content_test.dart  progression_test.dart  widget_test.dart
(+31 files in other folders)
